--- a/frontend/src/components/app-components/App.css
+++ b/frontend/src/components/app-components/App.css
@@ -34,6 +34,7 @@ footer {
   margin-bottom: 30px;
   text-align: center;
   font-size: 1.1rem;
+  font-weight: lighter;
 }
 
 .notes {
@@ -80,6 +81,18 @@ h1 {
     font-size: 18px;
   }
 }
+
+@media (max-width:470px) {
+  .header {
+    font-size: 14px;
+    padding: 0 5%;
+  }
+
+  footer {
+    font-size: 0.8rem;
+  }
+}
+
 
 
 
